--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,10 +14,14 @@
         android:label="LoginFragment" >
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
+            app:destination="@id/registerFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:popEnterAnim="@android:anim/fade_in" />
         <action
             android:id="@+id/action_loginFragment_to_objectListFragment"
-            app:destination="@id/objectListFragment" />
+            app:destination="@id/objectListFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:popEnterAnim="@android:anim/fade_in" />
     </fragment>
     <fragment
         android:id="@+id/objectListFragment"
@@ -26,7 +30,9 @@
         <action
             android:id="@+id/action_objectListFragment_to_createUpdateObjectFragment"
             app:destination="@id/createUpdateObjectFragment"
-            app:launchSingleTop="false">
+            app:enterAnim="@android:anim/slide_in_left"
+            app:launchSingleTop="false"
+            app:popEnterAnim="@android:anim/slide_in_left">
             <argument
                 android:name="isCreate"
                 android:defaultValue="true"
@@ -34,7 +40,7 @@
             <argument
                 android:name="objectValue"
                 android:defaultValue="@null"
-                app:argType="com.faculta.androidlabma.data.models.Movie"
+                app:argType="com.faculta.androidlabma.data.db.model.MovieDB"
                 app:nullable="true" />
         </action>
     </fragment>
@@ -48,8 +54,7 @@
             app:argType="boolean" />
         <argument
             android:name="objectValue"
-            android:defaultValue="@null"
-            app:argType="com.faculta.androidlabma.data.models.Movie"
+            app:argType="com.faculta.androidlabma.data.db.model.MovieDB"
             app:nullable="true" />
     </fragment>
 </navigation>
